generifies list usage to avoid coupling to linked list.